[gd_scene load_steps=39 format=3 uid="uid://ddwci5t4g8dg6"]

[ext_resource type="Texture2D" uid="uid://c5wsb6ge0kiub" path="res://Assets/Sprites/Objects/Mechdoor.png" id="1_j77fc"]
[ext_resource type="PackedScene" uid="uid://brujq4dkn34nd" path="res://Assets/Components/ProximityArea/proximity_area.tscn" id="2_6x7dr"]
[ext_resource type="Script" path="res://Objects/WorldObjects/mech_door.gd" id="2_o3hct"]
[ext_resource type="AudioStream" uid="uid://ema523w5cq40" path="res://SoundEffects/MechDoorOpen.wav" id="4_4j6e6"]
[ext_resource type="Script" path="res://SoundEffects/SoundObjects/sound_player_not_2d.gd" id="5_jn5li"]
[ext_resource type="AudioStream" uid="uid://btvlinrdqck0o" path="res://SoundEffects/EnemyDead.wav" id="6_cra8b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f3i1u"]
atlas = ExtResource("1_j77fc")
region = Rect2(0, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4ir5"]
atlas = ExtResource("1_j77fc")
region = Rect2(56, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7qao"]
atlas = ExtResource("1_j77fc")
region = Rect2(112, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b07h0"]
atlas = ExtResource("1_j77fc")
region = Rect2(168, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jnil"]
atlas = ExtResource("1_j77fc")
region = Rect2(224, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngdd1"]
atlas = ExtResource("1_j77fc")
region = Rect2(280, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p71o7"]
atlas = ExtResource("1_j77fc")
region = Rect2(336, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4ggs"]
atlas = ExtResource("1_j77fc")
region = Rect2(392, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyvjv"]
atlas = ExtResource("1_j77fc")
region = Rect2(448, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pt7tg"]
atlas = ExtResource("1_j77fc")
region = Rect2(504, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ue33"]
atlas = ExtResource("1_j77fc")
region = Rect2(560, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgyso"]
atlas = ExtResource("1_j77fc")
region = Rect2(616, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d86sg"]
atlas = ExtResource("1_j77fc")
region = Rect2(672, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt12h"]
atlas = ExtResource("1_j77fc")
region = Rect2(728, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_701ut"]
atlas = ExtResource("1_j77fc")
region = Rect2(784, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mebe0"]
atlas = ExtResource("1_j77fc")
region = Rect2(840, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nusc"]
atlas = ExtResource("1_j77fc")
region = Rect2(896, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qtkq"]
atlas = ExtResource("1_j77fc")
region = Rect2(952, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qytry"]
atlas = ExtResource("1_j77fc")
region = Rect2(1008, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkkrj"]
atlas = ExtResource("1_j77fc")
region = Rect2(1064, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_heu7b"]
atlas = ExtResource("1_j77fc")
region = Rect2(1120, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypkq4"]
atlas = ExtResource("1_j77fc")
region = Rect2(1176, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnsut"]
atlas = ExtResource("1_j77fc")
region = Rect2(1232, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sk0dv"]
atlas = ExtResource("1_j77fc")
region = Rect2(1288, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6agv"]
atlas = ExtResource("1_j77fc")
region = Rect2(1344, 0, 56, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hnev"]
atlas = ExtResource("1_j77fc")
region = Rect2(1400, 0, 56, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_o3sws"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3i1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4ir5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7qao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b07h0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jnil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngdd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p71o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4ggs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyvjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pt7tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ue33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgyso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d86sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt12h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_701ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mebe0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nusc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qtkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qytry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkkrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_heu7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypkq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnsut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sk0dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6agv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hnev")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ji55f"]
size = Vector2(2, 20)

[sub_resource type="Animation" id="Animation_b2tme"]
resource_name = "Open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 1), Vector2(1, 1), Vector2(0.7, 1), Vector2(2.08165e-12, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"open"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SoundPlayerNot2D2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [1.0, 1.0],
"method": &"playSound"
}]
}

[sub_resource type="Animation" id="Animation_ymkax"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Line2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cawgn"]
_data = {
"Open": SubResource("Animation_b2tme"),
"RESET": SubResource("Animation_ymkax")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j565c"]
size = Vector2(3, 24)

[node name="MechDoor" type="AnimatedSprite2D"]
z_index = 100
sprite_frames = SubResource("SpriteFrames_o3sws")
script = ExtResource("2_o3hct")

[node name="ProximityArea" parent="." instance=ExtResource("2_6x7dr")]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProximityArea"]
position = Vector2(-13, 0)
shape = SubResource("RectangleShape2D_ji55f")

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cawgn")
}

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(-13, 0)
scale = Vector2(1e-05, 1)
points = PackedVector2Array(0, -10, 0, 10)
default_color = Color(0.611765, 0.160784, 0.172549, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_j565c")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(10, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_j565c")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(19, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_j565c")

[node name="SoundPlayerNot2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4j6e6")
script = ExtResource("5_jn5li")

[node name="SoundPlayerNot2D2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_cra8b")
script = ExtResource("5_jn5li")
